style: add fixed positioning to header title for improved visibility

--- a/static/organizer/css/base-organizer.css
+++ b/static/organizer/css/base-organizer.css
@@ -137,6 +137,10 @@ body {
   display: none;
 }
 
+.header-title-x {
+  position: fixed;
+}
+
 footer {
   background-color: var(--green-900);
 }
